--- a/java/HrPortal/src/main/resources/templates/addEmployee.html
+++ b/java/HrPortal/src/main/resources/templates/addEmployee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="layouts/defaultLayout" lang="en">
+<html layout:decorate="~{layouts/defaultLayout}" lang="en">
 <body>
 <div class="container" layout:fragment="content"
      style="max-width: 500px; margin: 50px auto; padding: 20px; border: 1px solid #ccc; border-radius: 8px; background-color: #f9f9f9; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
