--- a/java/HrPortal/src/main/resources/templates/index.html
+++ b/java/HrPortal/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="layouts/defaultLayout" lang="en">
+<html layout:decorate="~{layouts/defaultLayout}" lang="en">
 <body>
 <div class="container" layout:fragment="content">
     <h1 class="my-3">Employees Table</h1>
